2014-12-19  Per Bothner  <per@bothner.com>

	* Compilation.java (pushNewModule): Merge overloaded versions.
	See ModuleInfo's sourceAbsPath to null if string or console.

2014-12-16  Per Bothner  <per@bothner.com>

	* Compilation.java (applyFunction) Moved from Translator.

	* ProcInitializer.java (emitLoadModuleMethod): For standard procedure
	property names, load from the corresponding pre-existing field.

	* InlineCalls.java (checkCast): On error, add an explicit coercion
	to void casading error messages.

2014-12-15  Per Bothner  <per@bothner.com>

	* Literal.java (Literal): Re-factor so constructors call each other.

2014-12-12  Per Bothner  <per@bothner.com>

	* ProcInitializer.java (emitLoadModuleMethod): Sometimes need
	to use loadHeapFrame.

2014-12-08  Per Bothner  <per@bothner.com>

	* StackTarget.java (forceLazy): New method.
	(forceLazyIfNeeded): Use forceLazy.

	* BlockExp.java (runFinallyBlocks): New field.
	(setRunFinallyBlocks): Set field.
	(compile): Use field.
	* FindTailCalls.java (visitExitExp): New method.
	Use returnContinuation prevously passed in the BlockExp.

2014-12-07  Per Bothner  <per@bothner.com>

	* Declaration.java (getCanReadOrCall): New method.
	* FindCapturedVars.java (capture): Use getCanReadOrCall as appropriate.
	In one case fix a bug - we should also check CAN_CALL.

2014-12-01  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (setupModuleExp): If we have a class, set value
	of decls that have static fields to the field value.

2014-11-28  Per Bothner  <per@bothner.com>

	* LambdaExp.java (allocMethod): Add a sanity check.

2014-11-26  Per Bothner  <per@bothner.com>

	* ChainLambdas.java (visitCaseExp): Fix logic error in handling of
	elseClause.

2014-11-20  Per Bothner  <per@bothner.com>

	* Language.java (languages): Add ".sld" extension for Scheme.

2014-11-17  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (getModuleExpRaw): New method.

2014-11-16  Per Bothner  <per@bothner.com>
